syntax = "proto3";

package services.user_service;
import "services/user_service/messages.proto";
import "common/entities.proto";

option java_package = "com.hackathonhub.user_protos.grpc";
option java_multiple_files = true;


service UserService {
  rpc CreateUser (CreateUserRequest) returns (common.User);
  rpc GetUserById (GetUserByIdRequest) returns (common.User);
  rpc GetUserByEmail (GetUserByEmailRequest) returns (common.User);
  rpc CheckUserExistenceByEmail (CheckUserExistenceByEmailRequest)
      returns (CheckUserExistenceByEmailResponse);
}